Implemented List and Detail Product

--- a/MeliChallenge/App/Resources/Localized/Localizable.xcstrings
+++ b/MeliChallenge/App/Resources/Localized/Localizable.xcstrings
@@ -9,6 +9,12 @@
             "state" : "translated",
             "value" : "MeliChallenge"
           }
+        },
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "MeliChallenge"
+          }
         }
       }
     },
@@ -59,6 +65,40 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Error"
+          }
+        }
+      }
+    },
+    "error_loading_product" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Error loading the product:"
+          }
+        },
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Error al cargar el producto:"
+          }
+        }
+      }
+    },
+    "failed_to_dequeue_cell" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Failed to dequeue cell at index path:"
+          }
+        },
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "No se pudo sacar de la cola la celda en la ruta de índice:"
           }
         }
       }
@@ -223,6 +263,40 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "OK"
+          }
+        }
+      }
+    },
+    "product_list" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Product List"
+          }
+        },
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Listado de productos"
+          }
+        }
+      }
+    },
+    "product_loaded_successfully" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Product loaded successfully"
+          }
+        },
+        "es-419" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "El producto se cargó correctamente"
           }
         }
       }
